tests/errors/interface_undefined.dang
# Test implementing an undefined interface

type Person implements UndefinedInterface {
  pub name: String!
}
